fabric-1.16.5: Java 8 port, runtime fixes, document differences
- Target MC 1.16.5, Fabric API 0.42.0, Loom 1.10; Gson/slf4j jar-in-jar
- Item components -> ItemStack NBT; furnace writeNbt/fromTag for heart
- Commands: v1 registration, hasPermissionLevel(2), LiteralText/feedback
- Mixin: AbstractFurnace instance tick; AbstractBlock getDroppedStacks loot
- Natural spawn: CHUNK_LOAD; tendril pulses without block displays
- Trim deepslate/copper ore sets; no sculk/pale-moss pass-throughTags
- VoidClamConfig: Paths.get + readAllBytes for Java 8
- Add docs/Port-1.16-differences.md for removed/changed features

Made-with: Cursor